created and styled all the required pages

--- a/tapcordsite/templates/tapcordsite/base.html
+++ b/tapcordsite/templates/tapcordsite/base.html
@@ -23,6 +23,8 @@
         <!-- C:\Users\dell\Desktop\mydev\tapcord\tapcordsite\tapcordsite\static\tapcordsite -->
         
         <link href="{% static 'tapcordsite/css/style.css' %}" type="text/css" rel="stylesheet">
+        <!-- this is my css style by franklymade -->
+        <link href="{% static 'tapcordsite/css/mystyle.css' %}" type="text/css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
