--- a/tapcordsite/templates/tapcordsite/included/our_team_section.html
+++ b/tapcordsite/templates/tapcordsite/included/our_team_section.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="center-title">
-                    <i class="glyphicon glyphicon-education"></i>
+                    <i class="glyphicon glyphicon-user"></i>
                     <h2>Meet our <strong>Specialists</strong></h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
@@ -16,10 +16,10 @@
         <div class="row">
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.1s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/team-1.jpg' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.png' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
-                    <h3>Dr. Lorem</h3>
-                    <em>Gastro Specialist</em>
+                    <h3>Engr. Franklin</h3>
+                    <em>Electrical installation and maintenance & repair specialist</em>
                     <div class="divide20"></div>
                     <ul class="list-inline">
                         <li>
@@ -45,10 +45,10 @@
             </div><!--col-md-3 col-sm-6--> 
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.2s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/team-3.jpg' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.png' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
-                    <h3>Dr. Ipsum</h3>
-                    <em>Cancer Specialist</em>
+                    <h3>Engr. Tochukwu</h3>
+                    <em>Plumbing specialist</em>
                     <div class="divide20"></div>
                     <ul class="list-inline">
                         <li>
@@ -74,10 +74,10 @@
             </div><!--col-md-3 col-sm-6-->
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.3s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/team-2.jpg' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/woman1.png' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
-                    <h3>Dr. Dallar</h3>
-                    <em>Dental Specialist</em>
+                    <h3>Madam elizbeth</h3>
+                    <em>Admin/facility manager</em>
                     <div class="divide20"></div>
                     <ul class="list-inline">
                         <li>
@@ -103,10 +103,10 @@
             </div><!--col-md-3 col-sm-6-->
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.4s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/team-4.jpg' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.png' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
-                    <h3>Dr. Inpost</h3>
-                    <em>Diet Specialist</em>
+                    <h3>Engr Festus</h3>
+                    <em>Project manager</em>
                     <div class="divide20"></div>
                     <ul class="list-inline">
                         <li>
