--- a/tapcordsite/templates/tapcordsite/included/request_quota_banner.html
+++ b/tapcordsite/templates/tapcordsite/included/request_quota_banner.html
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 text-center">
-                <h3>We offer full medical exam !!!</h3>
+                <h3>We would love to help you succeed !!!</h3>
             </div>
             <div class="col-md-4 text-center">
-                <a href="#" class="btn btn-white-border btn-lg">Request quotation</a>
+                <a href="{% url 'contact' %}" class="btn btn-white-border btn-lg">Request quotation</a>
             </div>
         </div>
     </div>
