--- a/tapcordsite/templates/tapcordsite/included/testimonials_section.html
+++ b/tapcordsite/templates/tapcordsite/included/testimonials_section.html
@@ -12,30 +12,33 @@
                 <div class="testi-slides">
                     <ul class="slides">
                         <li>
-                            <img src="{% static 'tapcordsite/img/medical/testimonials-1.jpg' %}" alt="">
-                            <h4>Garry McCleey</h4>
+                            <img src="{% static 'tapcordsite/img/medical/man2.png' %}" alt="">
+                            <h4>Victor </h4>
                             <em>Software developer</em>
   
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                Tapcord is swift to response when ever i need them for my residencial maintenance work. they always go beyond my expectation
+
                             </p>
                         </li>
                         <li>
-                            <img src="{% static 'tapcordsite/img/medical/testimonials-2.jpg' %}" alt="">
-                            <h4>Sarah Brown</h4>
-                            <em>School teacher</em>
+                            <img src="{% static 'tapcordsite/img/medical/man1.png' %}" alt="">
+                            <h4>Simon</h4>
+                            <em>Project manager</em>
   
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                Tapcord engineering is my goto for any electrical and plumbing works come rain come shine, they have always proven them selves worthy of my trust,
+                                so yes i will definitely recomend tapcord
                             </p>
                         </li>
                         <li>
-                            <img src="{% static 'tapcordsite/img/medical/testimonials-3.jpg' %}" alt="">
-                            <h4>Donald Trump</h4>
-                            <em>Artist</em>
+                            <img src="{% static 'tapcordsite/img/medical/woman2.png' %}" alt="">
+                            <h4>Mercy Okafor</h4>
+                            <em>Senior manage</em>
   
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                I would always recomend tapcord to any one that really wants get stuff done real fast and perfect,
+                                they are infact very reliable when it comes to handling facilities, they always do wonderful job.
                             </p>
                         </li>
                     </ul>
