--- a/tapcordsite/templates/tapcordsite/included/video_section.html
+++ b/tapcordsite/templates/tapcordsite/included/video_section.html
@@ -4,22 +4,24 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 margin30">
-                <h3>Video Presentation</h3>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3>Video Presentation </h3>
+                <p class="lead">Our work speak for us</p>
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe src="http://player.vimeo.com/video/133170635"></iframe>
+                    <iframe  src="https://www.youtube.com/embed/wIfVTAh4eWs?autoplay=1&controls=0&loop=0&mute=1"></iframe>
+                    <!-- https://www.youtube.com/embed/VIDEO_ID -->
+                    
                 </div>
             </div>
             <div class="col-sm-6 margin30">
-                <h3>Medical Departments</h3>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3>Tapcord Engineering</h3>
+                <p class="lead">Why Choose Us</p>
   
                 <div class="panel-group collapse-colored-col" id="accordion">
                     <div class="panel panel-default">
                         <div class="panel-heading active">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                    Primary doctors
+                                    REliable
                                 </a>
                             </h4>
                         </div><!-- /.panel-heading -->
@@ -35,7 +37,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                    Dental center
+                                    years of experience in the industry
                                 </a>
                             </h4>
                         </div><!-- /.panel-heading -->
@@ -51,7 +53,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                    Gastro center
+                                    Affordability
                                 </a>
                             </h4>
                         </div><!-- /.panel-heading -->
@@ -67,7 +69,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                                    Cancer center
+                                    Goal oriented
                                 </a>
                             </h4>
                         </div><!-- /.panel-heading -->
