--- a/tapcord/templates/tapcord/about.html
+++ b/tapcord/templates/tapcord/about.html
@@ -18,9 +18,9 @@
         <div class="container about-page">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Welcome to <strong>E-Hospital</strong></h1>
+                    <h1>Welcome to <strong>Tapcord Engineering</strong></h1>
                     <p class="lead">
-                        If you need a doctor for to consectetuer Lorem ipsum dolor, consectetur adipiscing elit. Ut volutpat eros adipiscing nonummy.
+                        If you need a professional hands to help you achieve your project goals then you are in the right place
                     </p>
                 </div>
             </div><!--end row-->
@@ -39,38 +39,59 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img src="{% static 'tapcordsite/img/medical/equp-1.jpg' %}" alt="img">
+                                <img src="{% static 'tapcordsite/img/medical/equp-5.jpg' %}" alt="img">
                             </div>
 
                             <div class="item">
-                                <img src="{% static 'tapcordsite/img/medical/equp-2.jpg' %}" alt="img">
+                                <img src="{% static 'tapcordsite/img/medical/equp-6.jpg' %}" alt="img">
                             </div>
 
                             <div class="item">
-                                <img src="{% static 'tapcordsite/img/medical/equp-3.jpg' %}" alt="img">
+                                <img src="{% static 'tapcordsite/img/medical/equp-7.jpg' %}" alt="img">
                             </div>
 
                             <div class="item">
-                                <img src="{% static 'tapcordsite/img/medical/equp-4.jpg' %}" alt="img">
+                                <img src="{% static 'tapcordsite/img/medical/equp-8.jpg' %}" alt="img">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <p>
-                        Lorem ipsum dolor amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
+                    <h4>
+                       Electrical Services
+                    </h4>
                     
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-check-square"></i>Dental Specialists.</li>
-                        <li><i class="fa fa-check-square"></i>X-Ray and Laboratory exams.</li>
-                        <li><i class="fa fa-check-square"></i>Traumatology emergency services.</li>
-                        <li><i class="fa fa-check-square"></i>Gastroenterology diseases.</li>
-                        <li><i class="fa fa-check-square"></i>People virus prevention methods.</li>
+                        <li><i class="fa fa-check-square"></i>Installation, repair and maintenance of electrical system</li>
+                        <li><i class="fa fa-check-square"></i>Smart home automation system installation and maintenance</li>
+                        <li><i class="fa fa-check-square"></i>CCTV camera installation</li>
+                        <li><i class="fa fa-check-square"></i>Heat detector and fire alarm system/li>
+                        <li><i class="fa fa-check-square"></i>Household, commercial and industrial electrical system maintenance</li>
                         <li><i class="fa fa-check-square"></i>Cancer and AIDS Specialists</li>
                     </ul>
+
+                    <h4>
+                        plumbing Services
+                    </h4>
+                     
+                     <ul class="list-unstyled">
+                         <li><i class="fa fa-check-square"></i>Plumbing system installation and repirs</li>
+                         <li><i class="fa fa-check-square"></i>Heat pumps and installation</li>
+                         <li><i class="fa fa-check-square"></i>installation of sanitary wares</li>
+                         <li><i class="fa fa-check-square"></i>Household, commercial & industrial building renovations/maintenance/li>
+                         <li><i class="fa fa-check-square"></i>Heat detector and fire alarm system/li>
+                         <li><i class="fa fa-check-square"></i>Block drain Fixes</li>
+                         <li><i class="fa fa-check-square"></i>Liking pipe fixes</li>
+                     </ul>
+
+
                     <p>
-                    	Euismod nec nunc et, luctus viverra mauris. Vestibulum dictum nunc a diam bibendum tempus. Etiam odio ligula, luctus et ante bibendum, rhoncus rhoncus lorem. Proin at euismod nunc. Integer sagittis lorem at lorem rhoncus placerat. Praesent tellus metus, molestie non feugiat in, suscipit vitae arcu. Sed a justo rutrum, interdum turpis quis, imperdiet est. Cras nec dolor vitae metus molestie lacinia dignissim ut nisl. Praesent finibus quis ligula vel molestie. Ut condimentum lacus nec dolor pulvinar blandit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec semper dui. Maecenas vulputate, lacus eu facilisis suscipit, erat augue malesuada lorem, efficitur efficitur arcu quam eget dolor.
+                    	We are your reliable partner for all your electrical, plumbing and facility management needs. we offer exceptional services and solution for our residential, commercial and industrial clients.
+                        with years of experience in the industry we take great pride in our experties, reliability and commitment to service, having realised that clients success is our drive therefore we go above and 
+                        beyond to ensure that we delever the right result and at the right time.
+                    </p>
+                    <p>
+                        so therefore if accomplishment is what you seek<a class="second-head" href="{% url 'contact' %}"> CONTACT US</a> today we would be more eager to guide and assist you.
                     </p>
                 </div>
             </div><!--end row-->
