--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -14,18 +14,18 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active"> 
-              <img src="{% static 'tapcordsite/img/slider/slide1.jpg' %}" alt="...">
-                <div class="carousel-caption"> <span class="second-head">Advanced</span> healthcare made personal. 
+              <img src="{% static 'tapcordsite/img/slider/slide4.jpg' %}" alt="...">
+                <div class="carousel-caption"> <span class="second-head">Advanced</span> home automations with fine finishing. 
               </div>
           </div>
           <div class="item"> 
-              <img src="{% static 'tapcordsite/img/slider/slide2.jpg' %}" alt="...">
-              <div class="carousel-caption"> <span class="second-head">Exceptional</span> technology. Extraordinary care!
+              <img src="{% static 'tapcordsite/img/slider/slide5.jpg' %}" alt="...">
+              <div class="carousel-caption"> <span class="second-head">Perfect</span> Sanitary installation
               </div>
           </div>
           <div class="item"> 
-              <img src="{% static 'tapcordsite/img/slider/slide3.jpg' %}" alt="...">
-              <div class="carousel-caption"> <span class="second-head">Medicine</span> that touches the world!
+              <img src="{% static 'tapcordsite/img/slider/slide6.jpg' %}" alt="...">
+              <div class="carousel-caption"> <span class="second-head">Exceptional</span> care for your home
               </div>
           </div>
         </div>
@@ -49,24 +49,24 @@
 <div class="container">
   <div class="row center-title">
       <div class="col-md-8 col-md-offset-2 clearfix text-center wow animated fadeInUp">
-          <h2>Medical Bootstrap Theme</h2>
+          <h2>Tapcord Engineering Services</h2>
           <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+              Lets help you fix it.
           </p>
           <!--                   -->
       </div>
   </div>
   <div class="row">
-      <div class="col-sm-6 col-md-3 margin30">
+      <div class="col-sm-6 col-md-4 margin30">
           <div class="service-box wow animated fadeIn" data-wow-delay="0.1s">
-              <i class="glyphicon glyphicon-scale"></i>
-              <h4>Special Care </h4>
+              <i class="glyphicon glyphicon-hdd"></i>
+              <h4>Electrical Services </h4>
               <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. 
               </p>
           </div>
       </div><!--service column-->
-      <div class="col-sm-6 col-md-3 margin30">
+      <!-- <div class="col-sm-6 col-md-3 margin30">
           <div class="service-box wow animated fadeIn" data-wow-delay="0.2s">
               <i class="glyphicon glyphicon-user"></i>
               <h4>On-line Support</h4>
@@ -74,20 +74,20 @@
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. 
               </p>
           </div>
-      </div><!--service column-->
-      <div class="col-sm-6 col-md-3 margin30">
+      </div>service column -->
+      <div class="col-sm-6 col-md-4 margin30">
           <div class="service-box wow animated fadeIn" data-wow-delay="0.3s">
-              <i class="glyphicon glyphicon-leaf"></i>
-              <h4>Medical Consultation</h4>
+              <i class="glyphicon glyphicon-scale"></i>
+              <h4>Plumbing services</h4>
               <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. 
               </p>
           </div>
       </div><!--service column-->
-      <div class="col-sm-6 col-md-3 margin30">
+      <div class="col-sm-6 col-md-4 margin30">
           <div class="service-box wow animated fadeIn" data-wow-delay="0.4s">
-              <i class="glyphicon glyphicon-earphone"></i>
-              <h4>Emergency Services</h4>
+              <i class="glyphicon glyphicon-tower"></i>
+              <h4>Facility management</h4>
               <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. 
               </p>
@@ -96,7 +96,7 @@
   </div>
   <div class="divide20"></div>
   <div class="text-center">
-      <a href="#" class="btn btn-lg btn-theme-bg">More about our Services <i class="glyphicon glyphicon-circle-arrow-right"></i></a>
+      <a href="{% url 'about_us' %}" class="btn btn-lg btn-theme-bg">More about our Services <i class="glyphicon glyphicon-circle-arrow-right"></i></a>
   </div>
 </div>
 <div class="divide60"></div>
@@ -122,7 +122,7 @@
 <section class="blog-home">
   <div class="container">
       <div class="center-title">
-          <i class="glyphicon glyphicon-qrcode"></i>
+          <i class="glyphicon glyphicon-wrench"></i>
           <h2>Special<strong> Services</strong></h2>                        
       </div>
       <div class="row">
