--- a/tapcordsite/templates/tapcordsite/included/navbars.html
+++ b/tapcordsite/templates/tapcordsite/included/navbars.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'tapcordsite/img/logo.png' %}" alt=""></a>
+            <a class="navbar-brand tap_logo"  href="{% url 'home' %}"><img src="{% static 'tapcordsite/img/tap_logo.png' %}" alt=""></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -25,7 +25,7 @@
 
                     </ul>
                 </li>
-                <li><a href="{% url 'team' %}">Our Team</a></li>
+                <!-- <li><a href="{% url 'team' %}">Our Team</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -35,7 +35,7 @@
                         <li><a href="{% url 'services' %}">Emergency Room</a></li>
 
                     </ul>
-                </li>
+                </li> -->
                 <li><a href="{% url 'gallery' %}">Gallery</a></li>
                 <li><a href="{% url 'contact' %}">Contact us</a></li>
             </ul>
