added the blog app

--- a/tapcord/templates/tapcord/contact.html
+++ b/tapcord/templates/tapcord/contact.html
@@ -28,7 +28,7 @@
                             <i class="glyphicon glyphicon-home"></i>
                         </div>
                         <div class="media-body">
-                            <p>31452 8th Ave, New York, NY 10022</p>
+                            <p>72 Noble street white sand Lagos</p>
                         </div>
                     </div>
                     </div><!--media-->
@@ -38,7 +38,7 @@
                             <i class="glyphicon glyphicon-envelope"></i>
                         </div>
                         <div class="media-body">
-                            <p>support@sitename.com</p>
+                            <p>tapcordengineering@gmail.com</p>
                         </div>
                     </div>
                     </div><!--media-->
@@ -48,7 +48,7 @@
                             <i class="glyphicon glyphicon-phone"></i>
                         </div>
                         <div class="media-body">
-                            <p>+1 234 567 8910</p>
+                            <p>+234 81 407 901 16</p>
                         </div>
                     </div>
                     </div><!--media-->                    
