--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -119,55 +119,9 @@
 {% include 'included/request_quota_banner.html' %}
 <!-- end request a quota section -->
 
-<section class="blog-home">
-  <div class="container">
-      <div class="center-title">
-          <i class="glyphicon glyphicon-wrench"></i>
-          <h2>Special<strong> Services</strong></h2>                        
-      </div>
-      <div class="row">
-          <div class="col-md-4 margin30">
-              <div class="blog-post">
-                  <img src="{% static 'tapcordsite/img/medical/home-services-1.jpg' %}" alt="" class="img-responsive">
-                  <h3>
-                      <a href="#"> lorem ipsum dolor sit amet</a>
-                  </h3>
-                  <span>July 12, 2015 Dr. Lorem</span>
-                  <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                  </p>
-                  <p><a href="#">Read more...</a></p>
-              </div>
-          </div>
-          <div class="col-md-4 margin30">
-              <div class="blog-post">
-                  <img src="{% static 'tapcordsite/img/medical/home-services-2.jpg' %}" alt="" class="img-responsive">
-                  <h3>
-                      <a href="#"> Lorem ipsum dolor sit amet</a>
-                  </h3>
-                  <span>June 11, 2015 Dr. Ipsum</span>
-                  <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                  </p>
-                  <p><a href="#">Read more...</a></p>
-              </div>
-          </div>
-          <div class="col-md-4 margin30">
-              <div class="blog-post">
-                  <img src="{% static 'tapcordsite/img/medical/home-services-3.jpg' %}" alt="" class="img-responsive">
-                  <h3>
-                      <a href="#"> Lorem ipsum dolor sit amet</a>
-                  </h3>
-                  <span>January 1, 2015 Dr. Lorem</span>
-                  <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id bibendum massa, vulputate consectetur dui. Ut ut eros congue, condimentum massa
-                  </p>
-                  <p><a href="#">Read more...</a></p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
+<!-- blog home -->
+{% include 'included/featured_blog_section.html'%}
+<!-- end blog section -->
 
 <div class="ads-section-newsletter">
   <div class="container">
