--- a/tapcordsite/static/tapcordsite/css/mystyle.css
+++ b/tapcordsite/static/tapcordsite/css/mystyle.css
@@ -81,6 +81,23 @@
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
+/* .service-box img {
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    display: inline-block;
+    color: #fff;
+    background-color: #f66808;
+    font-size: 30px;
+    margin-top: -60px;
+    position: relative;
+    -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+    -ms-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2); 
+
+} */
 .service-box {
     border: 1px solid #041e37;
     margin-bottom: 30px;
