--- a/tapcordsite/templates/tapcordsite/included/navbars.html
+++ b/tapcordsite/templates/tapcordsite/included/navbars.html
@@ -21,23 +21,28 @@
                         <li><a href="{% url 'about_us' %}">What we do</a></li>
                         <li><a href="{% url 'about_us' %}">Our Hisrory</a></li>
                         <li><a href="{% url 'about_us' %}">Our Leadership</a></li>
-                        <li><a href="{% url 'about_us' %}">Press about us</a></li>
+                        <!-- <li><a href="{% url 'about_us' %}">Press about us</a></li> -->
 
                     </ul>
                 </li>
-                <!-- <li><a href="{% url 'team' %}">Our Team</a></li>
+                <!-- ***** -->
+                <!-- <li><a href="{% url 'team' %}">Our Team</a></li> -->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'services' %}">Cancer Center</a></li>
-                        <li><a href="{% url 'services' %}">Rehabilitation Center</a></li>
-                        <li><a href="{% url 'services' %}">Gastro Labs</a></li>
-                        <li><a href="{% url 'services' %}">Emergency Room</a></li>
+                        <li><a href="{% url 'services' %}">plumbing</a></li>
+                        <li><a href="{% url 'services' %}">Electrical</a></li>
+                        <li><a href="{% url 'services' %}">Facility management</a></li>
+                        <!-- <li><a href="{% url 'services' %}">Emergency Room</a></li> -->
 
                     </ul>
-                </li> -->
+                </li>
+                <!-- ****** -->
                 <li><a href="{% url 'gallery' %}">Gallery</a></li>
+                <li><a href="">Shop</a></li>
+
                 <li><a href="{% url 'contact' %}">Contact us</a></li>
+                <li><a href="{% url 'posts' %}">View post</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
