fixing server error problem setting debug to true for check

--- a/tapcord/templates/tapcord/about.html
+++ b/tapcord/templates/tapcord/about.html
@@ -97,6 +97,9 @@
             </div><!--end row-->
         </div>
         <div class="divide30"></div>
+
+        {% include 'included/home_service_banner.html' %}
+
         
         <!-- meat our team or specialist section -->
         {% include 'included/our_team_section.html' %}
