--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -103,6 +103,8 @@
 
 
 <!-- Meet our team or specialist section -->
+{% include 'included/home_service_banner.html' %}
+
 {% include 'included/our_team_section.html' %}
 
 
