--- a/tapcord/templates/tapcord/services.html
+++ b/tapcord/templates/tapcord/services.html
@@ -91,6 +91,9 @@
 
  		<div class="divide30"></div>
 
+        {% include 'included/home_service_banner.html' %}
+
+
          {% include 'included/testimonials_section.html' %}
         <!--testimonials end-->
 
