added the admin code snipet for render super user

--- a/blog/templates/blog/boostrapbloghome.html
+++ b/blog/templates/blog/boostrapbloghome.html
@@ -42,7 +42,7 @@
                                     <div class="small text-muted">November 1, 2023</div>
                                     <h2 class="card-title h4">{{postitem.title}}</h2>
                                     <p class="card-text">{{postitem.shotend_desc}}</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                    <a class="btn btn-primary" href="#">Read more →</a>
                                 </div>
                             </div>
                         </div>
