--- a/tapcordsite/templates/tapcordsite/included/testimonials_section.html
+++ b/tapcordsite/templates/tapcordsite/included/testimonials_section.html
@@ -37,8 +37,8 @@
                             <em>Senior manage</em>
   
                             <p>
-                                I would always recomend tapcord to any one that really wants get stuff done real fast and perfect,
-                                they are infact very reliable when it comes to handling facilities, they always do wonderful job.
+                                I would always recomend tapcord to any one that really wants to get stuff done real fast and perfect,
+                                they are infact very reliable when it comes to handling facilities, they always do a wonderful job.
                             </p>
                         </li>
                     </ul>
