--- a/tapcordsite/templates/tapcordsite/included/video_section.html
+++ b/tapcordsite/templates/tapcordsite/included/video_section.html
@@ -7,7 +7,8 @@
                 <h3>Video Presentation </h3>
                 <p class="lead">Our work speak for us</p>
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe  src="https://www.youtube.com/embed/wIfVTAh4eWs?autoplay=1&controls=0&loop=0&mute=1"></iframe>
+                    <!-- <iframe  src="https://www.youtube.com/embed/wIfVTAh4eWs?autoplay=1&controls=0&loop=1&mute=1"></iframe> -->
+                    <iframe  src="https://www.youtube.com/embed/wIfVTAh4eWs?autoplay=0&controls=1&lop=1&mute=1"></iframe>
                     <!-- https://www.youtube.com/embed/VIDEO_ID -->
                     
                 </div>
@@ -21,7 +22,7 @@
                         <div class="panel-heading active">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                    REliable
+                                    REliability
                                 </a>
                             </h4>
                         </div><!-- /.panel-heading -->
