--- a/tapcordsite/templates/tapcordsite/included/navbars.html
+++ b/tapcordsite/templates/tapcordsite/included/navbars.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand tap_logo"  href="{% url 'home' %}"><img src="{% static 'tapcordsite/img/tap_logo.png' %}" alt=""></a>
+            <a class="navbar-brand tap_logo"  href="{% url 'home' %}"><img src="{% static 'tapcordsite/img/tap_logo.jpg' %}" alt=""></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
