added database for render

--- a/tapcordsite/templates/tapcordsite/included/our_team_section.html
+++ b/tapcordsite/templates/tapcordsite/included/our_team_section.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.1s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.png' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.jpg' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
                     <h3>Engr. Franklin</h3>
                     <em>Electrical installation and maintenance & repair specialist</em>
@@ -45,7 +45,7 @@
             </div><!--col-md-3 col-sm-6--> 
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.2s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.png' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.jpg' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
                     <h3>Engr. Tochukwu</h3>
                     <em>Plumbing specialist</em>
@@ -74,7 +74,7 @@
             </div><!--col-md-3 col-sm-6-->
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.3s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/woman1.png' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/woman1.jpg' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
                     <h3>Madam elizbeth</h3>
                     <em>Admin/facility manager</em>
@@ -103,7 +103,7 @@
             </div><!--col-md-3 col-sm-6-->
             <div class="col-sm-6 col-sm-3 margin30">
                 <div class="team-col wow animated fadeInLeft" data-wow-delay="0.4s">
-                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.png' %}" class="img-responsive" alt=""></a>
+                    <a href="#"><img src="{% static 'tapcordsite/img/medical/man3.jpg' %}" class="img-responsive" alt=""></a>
                     <div class="divide20"></div>
                     <h3>Engr Festus</h3>
                     <em>Project manager</em>
