--- a/tapcordsite/templates/tapcordsite/included/testimonials_section.html
+++ b/tapcordsite/templates/tapcordsite/included/testimonials_section.html
@@ -12,7 +12,7 @@
                 <div class="testi-slides">
                     <ul class="slides">
                         <li>
-                            <img src="{% static 'tapcordsite/img/medical/man2.png' %}" alt="">
+                            <img src="{% static 'tapcordsite/img/medical/testimonials/man2.jpg' %}" alt="">
                             <h4>Victor </h4>
                             <em>Software developer</em>
   
@@ -22,7 +22,7 @@
                             </p>
                         </li>
                         <li>
-                            <img src="{% static 'tapcordsite/img/medical/man1.png' %}" alt="">
+                            <img src="{% static 'tapcordsite/img/medical/testimonials/man1.jpg' %}" alt="">
                             <h4>Simon</h4>
                             <em>Project manager</em>
   
@@ -32,7 +32,7 @@
                             </p>
                         </li>
                         <li>
-                            <img src="{% static 'tapcordsite/img/medical/woman2.png' %}" alt="">
+                            <img src="{% static 'tapcordsite/img/medical/testimonials/woman2.jpg' %}" alt="">
                             <h4>Mercy Okafor</h4>
                             <em>Senior manage</em>
   
