some design mark up

--- a/tapcordsite/templates/tapcordsite/included/footer.html
+++ b/tapcordsite/templates/tapcordsite/included/footer.html
@@ -2,29 +2,29 @@
     <div class="divide40"></div>
     <div class="socials-colored col-md-12 center">
        <a href="#" class="social-icon social-ico-dark social-ico-colored-facebook">
-           <i class="fa fa-facebook"></i>
-           <i class="fa fa-facebook"></i>
+           <i class="fab fa-facebook"></i>
+           <i class="fab fa-facebook"></i>
        </a>
        <a href="#" class="social-icon social-ico-dark social-ico-colored-twitter">
-           <i class="fa fa-twitter"></i>
-           <i class="fa fa-twitter"></i>
+           <i class="fab fa-twitter"></i>
+           <i class="fab fa-twitter"></i>
        </a>
        <a href="#" class="social-icon social-ico-dark social-ico-colored-google-plus">
-           <i class="fa fa-google-plus"></i>
-           <i class="fa fa-google-plus"></i>
+           <i class="fab fa-google-plus"></i>
+           <i class="fab fa-google-plus"></i>
        </a>
        <a href="#" class="social-icon social-ico-dark social-ico-colored-youtube">
-           <i class="fa fa-youtube-play"></i>
-           <i class="fa fa-youtube-play"></i>
+           <i class="fab fa-youtube"></i>
+           <i class="fab fa-youtube"></i>
        </a>
        <a href="#" class="social-icon social-ico-dark social-ico-colored-linkedin">
-           <i class="fa fa-linkedin"></i>
-           <i class="fa fa-linkedin"></i>
+           <i class="fab fa-linkedin"></i>
+           <i class="fab fa-linkedin"></i>
        </a>
    </div>
    <div class="footer-copyright">
        <div class="container">
-           <span>Copyright &copy; 2020. All right reserved.</span>
+           <span>Copyright &copy; 2023. All right reserved.</span>
        </div>
    </div>
 </footer>
