--- a/tapcordsite/templates/tapcordsite/included/home_service_banner.html
+++ b/tapcordsite/templates/tapcordsite/included/home_service_banner.html
@@ -7,7 +7,7 @@
                 <h3>In need of home service!!!</h3>
             </div>
             <div class="col-md-4 text-center">
-                <a href="{% url 'contact' %}" class="btn btn-white-border btn-lg">Call Now</a>
+                <a href="callto:+2348140790116" class="btn btn-white-border btn-lg">Call Now</a>
             </div>
         </div>
     </div>
