--- a/tapcordsite/templates/tapcordsite/included/quick_contact_form.html
+++ b/tapcordsite/templates/tapcordsite/included/quick_contact_form.html
@@ -1,8 +1,10 @@
 {% load static %}
 
-<div class="containe ads-section1  ">
-    <div class="row container">
+<div class="container quick_contact_form ">
+    <div class="row containe">
         <div class="contact-info">
+        <h4 center-title > Or Send Us A Quick Message</h4>
+
                          
         </div>
         
@@ -16,23 +18,23 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <input type="text" class="text-field form-control validate-field required" data-validation-type="string" 
-                                            id="form-name" placeholder="Full Name" name="name">
+                    id="form-name" placeholder="Full Name" name="name">
                 </div>
                 <div class="form-group">
                   <input type="email" class="text-field form-control validate-field required" data-validation-type="email" 
-                                            id="form-email" placeholder="Email Address" name="email">
+                    id="form-email" placeholder="Email Address" name="email">
                 </div>
                 <div class="form-group">
                   <input type="tel" class="text-field form-control validate-field phone" data-validation-type="phone" 
-                                            id="form-contact-number" placeholder="Contact Number" name="contact_number">
+                    id="form-contact-number" placeholder="Contact Number" name="contact_number">
                 </div>
-                <div class="form-group text-right"> 
+                <!-- <div class="form-group text-right"> 
                   <img id="form-captcha-img" src="{% static 'tapcordsite/mail/captcha/captcha.php' %}">
                   
                   <span id="form-captcha-refresh" class="fa fa-refresh" title="Reload"></span> 
                   <input type="text" class="text-field form-control validate-field required" data-validation-type="captcha" 
                                             id="form-captcha" placeholder="Enter text" name="captcha">
-                </div>
+                </div> -->
               </div>
             
             <!-- END: Left Column --> 
