--- a/tapcordsite/static/tapcordsite/css/mystyle.css
+++ b/tapcordsite/static/tapcordsite/css/mystyle.css
@@ -64,6 +64,8 @@
     margin-bottom: 20px;
 }
 
+
+
 .service-box i {
     width: 60px;
     height: 60px;
@@ -151,6 +153,41 @@
     background-color: #041e37 !important;
     padding: 50px 50px !important;
 }
+
+.quick_contact_form h4 {
+    color: #fff;
+    margin-bottom: 50px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 45px;
+    text-align: center;
+}
+
+.form-style .btn, .modal-dialog .btn {
+    background-color: #f66808;
+    color: #fff;
+}
+
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1.5px solid #f66808;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
 
 .home_service_banner {
     background-color: #f66808;
