--- a/tapcordsite/templates/tapcordsite/base.html
+++ b/tapcordsite/templates/tapcordsite/base.html
@@ -40,7 +40,8 @@
             <div class="top-bar">
                 <div class="row">
                     <div class="col-md-7 hidden-xs hidden-sm">
-                        <span><i class="glyphicon glyphicon-phone"></i> +234 81 407 901 16</span>
+                        <span><i class="glyphicon glyphicon-phone"></i><a href="callto:+2348140790116"> +234 81 407 901 16</a></span>
+
                     </div>
                     <div class="col-md-5 text-right">
                         <div class="top-bar-right">
@@ -48,6 +49,15 @@
                         </div>
 
                     </div>
+
+                    <ul class="list-inline mb-0 small text-center">
+            
+                        <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/tapcordengineering"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item"><a class="reset-anchor" href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a class="reset-anchor" href="https://api.whatsapp.com/send?phone=2348140790116"><i class="fab fa-whatsapp"></i></a></li>
+                        <li class="list-inline-item "><a class="reset-anchor" href="mailto:tapcordengineering@gmail.com"><i class="fab fa-email"></i>tapcordengineering@gmail.com</a></li>
+                      
+                    </ul>
                 </div>
             </div>
         </div>
@@ -80,6 +90,9 @@
         <script src="{% static 'tapcordsite/js/jquery.magnific-popup.min.js' %}" type="text/javascript"></script>
         <script src="{% static 'tapcordsite/js/wow.min.js' %}" type="text/javascript"></script>
         <script src="{% static 'tapcordsite/js/custom.js' %}" type="text/javascript"></script>
+
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
          
         
 
