add send mail functionality

--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+
 <div id="carousel-header" class="carousel slide" data-ride="carousel" data-interval="5000"> 
     <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -43,10 +44,17 @@
   
   
   </div>
+
+  
   <!-- end bootstrap carousel --> 
 
 <div class="divide70"></div>
 <div class="container">
+  
+    <!-- add the social icon -->
+    {% include "included/social_icon.html" %}
+
+    
   <div class="row center-title">
       <div class="col-md-8 col-md-offset-2 clearfix text-center wow animated fadeInUp">
           <h2>Tapcord Engineering Services</h2>
