--- a/tapcord/templates/tapcord/home.html
+++ b/tapcord/templates/tapcord/home.html
@@ -3,6 +3,11 @@
 
 
 {% block content %}
+<div center-title>
+    {% if success_msg %}
+        <h3>{{success_msg}}</h3>
+    {% endif %}
+</div>
 
 <div id="carousel-header" class="carousel slide" data-ride="carousel" data-interval="5000"> 
     <!-- Indicators -->
@@ -138,10 +143,13 @@
       <div class="row">
           <div class="col-sm-8 col-sm-offset-2 text-center">
               <h3>Subscribe to Newsletter</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <form class="form-inline">
+              <p>To stay up to date with industry best practices.</p>
+              <form class="form-inline" action="." method="">
+                {% csrf_token %}
+                
                   <div class="form-group">
-                      <input type="text" name="email" class="form-control" id="email" placeholder="Your email">
+                    {{news_letter_form}}
+                    <!-- <input type="text" name="email" class="form-control" id="email" placeholder="Your email"> -->
                   </div>
                   <button type="submit" name="submit" class="btn btn-theme-bg btn-lg">Subscribe</button>
               </form>
