--- a/tapcordsite/templates/tapcordsite/included/quick_contact_form.html
+++ b/tapcordsite/templates/tapcordsite/included/quick_contact_form.html
@@ -1,32 +1,112 @@
+
+
 {% load static %}
+       <!-- Static navbar -->
 
-<div class="container quick_contact_form ">
-    <div class="row containe">
-        <div class="contact-info">
-        <h4 center-title > Or Send Us A Quick Message</h4>
 
-                         
-        </div>
+
         
-        <!-- Contact Form -->
-        <div class="col-md-12"> 
-          <!-- IMPORTANT: change the email address at the top of the mail/mail.php file to the email address that you want this form to send to -->
-          {{success_msg}}
-          <form class="form-style validate-form clearfix" method="post" action="." method="POST" role="form">
-          {% csrf_token %}
-            {{myform.as_p}}
-           
-                <div class="form-group">
-                  <button type="submit" class="btn btn-lg btn-outline-inverse  submit">Submit</button>
+        <div class="container quick_contact_form ">
+            <div class="row">
+                <div class="contact-info">
+                    
                 </div>
-                <div class="form-group form-general-error-container"></div>
-              </div>
-              <!-- END: Right Column -->
+                
+                <!-- Contact Form -->
+                <div class="col-md-12 "> 
+                  <!-- IMPORTANT: change the email address at the top of the mail/mail.php file to the email address that you want this form to send to -->
+                  <form class="form-style validate-form clearfix" action="." method="POST" role="form">
+                    {% csrf_token %}
+                    <!-- Left Column -->
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group">
+
+                          {{myform.name}}
+                          <!-- <input type="text" class="text-field form-control validate-field required" data-validation-type="string"  -->
+                                                    <!-- id="form-name" placeholder="Full Name" name="name"> -->
+                        </div>
+                        <div class="form-group">
+                          {{myform.email}}
+                          <!-- <input type="email" class="text-field form-control validate-field required" data-validation-type="email"  -->
+                                                    <!-- id="form-email" placeholder="Email Address" name="email"> -->
+                        </div>
+                        <div class="form-group">
+                          {{myform.contact_number}}
+                          <!-- <input type="tel" class="text-field form-control validate-field phone" data-validation-type="phone"  -->
+                                                    <!-- id="form-contact-number" placeholder="Contact Number" name="contact_number"> -->
+                        </div>
+                        <div class="form-group text-right"> 
+                          <!-- <img id="form-captcha-img" src="{% static 'tapcordsite/mail/captcha/captcha.php' %}">
+                          
+                          <span id="form-captcha-refresh" class="fa fa-refresh" title="Reload"></span> 
+                          <input type="text" class="text-field form-control validate-field required" data-validation-type="captcha" 
+                                                    id="form-captcha" placeholder="Enter text" name="captcha"> -->
+                        </div>
+                      </div>
+                    
+                    <!-- END: Left Column --> 
+                    
+                    
+                      <!-- Right Column -->
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          {{myform.message}}
+                          <!-- <textarea placeholder="Message..." class="form-control validate-field required" name="message"></textarea> -->
+                        </div>
+
+                        <h3>{{success_msg}}</h3>
+                        
+                        <div class="form-group">
+                          <button type="submit" class="btn btn-lg btn-outline-inverse  submit">Submit</button>
+                        </div>
+                        <div class="form-group form-general-error-container"></div>
+                      </div>
+                      <!-- END: Right Column -->
+                    </div>
+                  </form>
+                </div>
+                <!-- END: Contact Form --> 
+     
             </div>
-          </form>
-
         </div>
-        <!-- END: Contact Form --> 
+		<div class="divide30"></div>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+        <script type="text/javascript">
+            var myLatlng;
+            var map;
+            var marker;
 
-    </div>
-</div>
+            function initialize() {
+                myLatlng = new google.maps.LatLng(40.712784, -74.005941);
+
+                var mapOptions = {
+                    zoom: 13,
+                    center: myLatlng,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP,
+                    scrollwheel: false,
+                    draggable: false
+                };
+                map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+                var contentString = '<p style="line-height: 20px; margin-bottom:4px;"><strong style="font-size:20px;text-transform:uppercase;"></strong></p><p style=" margin-bottom:4px;"></p>';
+
+                var infowindow = new google.maps.InfoWindow({
+                    content: contentString
+                });
+
+                marker = new google.maps.Marker({
+                    position: myLatlng,
+                    map: map,
+                    title: 'Marker'
+                });
+
+                google.maps.event.addListener(marker, 'click', function () {
+                    infowindow.open(map, marker);
+                });
+            }
+
+            google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+
+
